--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,8 +2,10 @@
 
 @import "_bootstrap.scss";
 
+@import "../../distr/owl.carousel/dist/assets/owl.carousel.min.css";
+
 .header_line {
-	margin-top:31px; 
+	margin-top:31px;
 	}
 
 h1 {
