--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,27 +27,133 @@ a {
     color: #202020;
 }
 h1 {
-
 	text-align: center;
-    }
-.buttons h1 {
+  }
+.block h1 {
 		margin-top: 101px;
 		margin-bottom: 44px;
 	text-align: center;
-
 }
 .buttons  {
 	text-align: center;
 }
-.margin{
+.buttons  button{
+margin-left: 20px;
+width: 109px;
+height: 45px;
+border-radius: 2px;
+font-family: Montserrat;
+font-size: 14px;
+letter-spacing: 0.7px;
+}
 
+.btn-primary {
+    color: #fff;
+    background-color: #0049b0;;
+    border-color: #2e6da4;
+}
+
+.def {
+	border-radius: 2px;
+   background-color: #ffffff;
+   border: solid 1px #0049b0;
+	 color: #0049b0;
+}
+.btn-success{
+	  background-color: #34bf49;
+}
+.btn-info{
+	background-color: #6dcff6;
+}
+.btn-warning{
+	background-color: #f49a9e;
+}
+.btn-danger{
+	background-color: #ed1c24;
+}
+
+.checkbox{
+font-family: OpenSans;
+ font-size: 15px;
+ text-align: left;
+ color: #5e5d5c;
+ }
+ // .chk{
+ //  width: 16px;
+ //   height: 16px;
+ //   background-color: #ffffff;
+ //   border: solid 1px #31a5e7;
+ // }
+
+ .checkbox label:after,
+.radio label:after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+.checkbox .cr,
+.radio .cr {
+    position: relative;
+    display: inline-block;
+  	border: solid 1px #464646;
+    // border-radius: .25em;
+		width: 16px;
+	  height: 16px;
+    float: left;
+    margin-right: .5em;
+		color: #31a5e7;
+}
+.radio .cr {
+    border-radius: 50%;
+}
+
+.checkbox .cr .cr-icon,
+.radio .cr .cr-icon {
+    position: absolute;
+    font-size: .8em;
+    line-height: 0;
+    top: 50%;
+    left: 20%;
+}
+.checkbox .cr .cr-icon{
+	margin-left: -2px;
+}
+
+// .radio .cr .cr-icon {
+//     margin-left: 0.04em;
+// }
+
+.checkbox label input[type="checkbox"],
+.radio label input[type="radio"] {
+    display: none;
+}
+
+.checkbox label input[type="checkbox"] + .cr > .cr-icon,
+.radio label input[type="radio"] + .cr > .cr-icon {
+
+    transform: scale(3) rotateZ(-20deg);
+    opacity: 0;
+    transition: all .3s ease-in;
+}
+
+.checkbox label input[type="checkbox"]:checked + .cr > .cr-icon,
+.radio label input[type="radio"]:checked + .cr > .cr-icon {
+
+    transform: scale(1) rotateZ(0deg);
+    opacity: 1;
+}
+
+.checkbox label input[type="checkbox"]:disabled + .cr,
+.radio label input[type="radio"]:disabled + .cr {
+    opacity: .5;
 }
 
 
 /* The switch - the box around the slider */
 .switch {
   position: relative;
-  display: inline-block;
+  // display: inline-block;
   width: 47px;
   height: 20px;
 
@@ -56,6 +162,13 @@ h1 {
 /* Hide default HTML checkbox */
 .switch input {display:none;
    }
+.sw {
+	margin-left: 60px;
+	font-family: OpenSans;
+ font-size: 15px;
+ text-align: left;
+ color: #5e5d5c;
+}
 
 /* The slider */
 .slider {
@@ -68,7 +181,12 @@ h1 {
   background-color: #ccc;
   -webkit-transition: .4s;
   transition: .4s;
-
+}
+.sw1{
+	  background-color: #34bf49;
+}
+.sw2{
+	 background-color: #f49a9e;
 }
 
 .slider:before {
@@ -83,8 +201,8 @@ h1 {
   transition: .4s;
 }
 
-input:checked + .slider {
-  background-color: #34bf49;
+input:checked{
+border: solid 1px #31a5e7;
 }
 
 input:focus + .slider {
