--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -52,3 +52,11 @@
     font-stretch: normal;
     unicode-range: U+0020-2044;
 }
+@font-face {
+    font-family:'MyriadPro';
+    src: url('../fonts/MyriadPro-Bold.otf');
+}
+@font-face {
+    font-family:'MyriadPro';
+    src: url('../fonts/MyriadPro-Regular.otf');
+}
