--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 .logo_line{
 	margin-bottom: 28px;
 }
+
 .nav{
   font-family: Roboto;
   font-size: 14px;
@@ -39,7 +40,6 @@ h1 {
 }
 .buttons  button{
 margin-left: 20px;
-width: 109px;
 height: 45px;
 border-radius: 2px;
 font-family: Montserrat;
@@ -244,7 +244,6 @@ justify-content:center;
 
 .main-footer{
 	padding: 53px;
-	margin-bottom: 50px;
 	font-size: 16px;
   background-color: #f4f5f7;
 	font-family: Roboto;
@@ -290,8 +289,11 @@ font-size: 17px;
 margin: 0px;
 }
 .input-group .form-control{
-	width: 292px;
+	width: 210px;
 
+}
+.input-group-btn{
+float: left;
 }
 .header_search{
 	margin-top: 14px;
@@ -369,12 +371,12 @@ margin: 0px;
     position: absolute;
     top: 50%;
   }
-  .owl-prev {
-    left: 10px;
-  }
-  .owl-next {
-    right: 10px;
-  }
+  // .owl-prev {
+  //   left: 10px;
+  // }
+  // .owl-next {
+  //   right: 10px;
+  // }
 }
 .item{
 	display: flex;
@@ -426,3 +428,66 @@ line-height: 2.5;
 text-align: left;
 color: #202020;
 }
+
+/*==================================================
+=            Bootstrap 3 Media Queries             =
+==================================================*/
+
+    /*==========  Mobile First Method  ==========*/
+
+    /* Custom, iPhone Retina */
+    @media only screen and (min-width : 320px) {
+
+    }
+
+    /* Extra Small Devices, Phones */
+    @media only screen and (min-width : 480px) {
+
+    }
+
+    /* Small Devices, Tablets */
+    @media only screen and (min-width : 768px) {
+
+    }
+
+    /* Medium Devices, Desktops */
+    @media only screen and (min-width : 992px) {
+
+    }
+
+    /* Large Devices, Wide Screens */
+    @media only screen and (min-width : 1200px) {
+
+    }
+
+    /*==========  Non-Mobile First Method  ==========*/
+
+    /* Large Devices, Wide Screens */
+    @media only screen and (max-width : 1200px) {
+
+    }
+
+    /* Medium Devices, Desktops */
+    @media only screen and (max-width : 992px) {
+
+    }
+
+    /* Small Devices, Tablets */
+    @media only screen and (max-width : 768px) {
+			.nav-justified > li > a, .nav-tabs.nav-justified > li > a {
+			    text-align: left;
+
+			}
+    }
+
+    /* Extra Small Devices, Phones */
+    @media only screen and (max-width : 480px) {
+			.input-group .form-control {
+		    width: 210px;
+		}
+    }
+
+    /* Custom, iPhone Retina */
+    @media only screen and (max-width : 320px) {
+
+    }
